--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Página de prueba<title>
 </head>
 <body>
-   <ul>
-     <li class="item1">item 1</li>
-     <li class="item2">item 2</li>
-     <li class="item3">item 3</li>
-     <li class="item4">item 4</li>
-     <li class="item5">item 5</li>
-   </ul>  
+  <h1>Hola amiguitos!</h1>
+  <footer>gpuma 2017</footer>
 </body>
 </html>
